--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
             "email": "sulasagi@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "nikic/fast-route": "^1.3",
+        "laminas/laminas-diactoros": "^2.4",
+        "laminas/laminas-httphandlerrunner": "^1.2"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "app"
