--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "require": {
         "nikic/fast-route": "^1.3",
         "laminas/laminas-diactoros": "^2.4",
-        "laminas/laminas-httphandlerrunner": "^1.2"
+        "laminas/laminas-httphandlerrunner": "^1.2",
+        "vlucas/phpdotenv": "^5.2"
     },
     "autoload": {
         "psr-4": {
