--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "nikic/fast-route": "^1.3",
         "laminas/laminas-diactoros": "^2.4",
         "laminas/laminas-httphandlerrunner": "^1.2",
-        "vlucas/phpdotenv": "^5.2"
+        "vlucas/phpdotenv": "^5.2",
+        "robmorgan/phinx": "^0.12.4"
     },
     "autoload": {
         "psr-4": {
