--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laminas/laminas-diactoros": "^2.4",
         "laminas/laminas-httphandlerrunner": "^1.2",
         "vlucas/phpdotenv": "^5.2",
-        "robmorgan/phinx": "^0.12.4"
+        "robmorgan/phinx": "^0.12.4",
+        "doctrine/orm": "^2.7"
     },
     "autoload": {
         "psr-4": {
