--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laminas/laminas-httphandlerrunner": "^1.2",
         "vlucas/phpdotenv": "^5.2",
         "robmorgan/phinx": "^0.12.4",
-        "doctrine/orm": "^2.7"
+        "doctrine/orm": "^2.7",
+        "php-di/php-di": "^6.2"
     },
     "autoload": {
         "psr-4": {
